--- a/DevWebPhp.WebAPI/appsettings.Development.json
+++ b/DevWebPhp.WebAPI/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "Super Secret Key"
+  },
   "ConnectionStrings" : {
     "Conexao" : "Data Source=DevWebPhp.db"
   },
